--- a/11_jQuery/01_start.html
+++ b/11_jQuery/01_start.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    >>>>>>>>>THIS IS TEST
     <meta charset="UTF-8">
     <title>jQuery</title>
     <!-- 1. 把 js 檔案抓到本機，或者採CDN (Content Delivery Network) 方式 -->
